--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     <section class="contact-me content">
       <div class="contact-container">
         <h1 class="main-title">Contact Me</h1>
-        <form method="post" action="./src/php/emailer.php" class="contact-form">
+        <form method="post" action="emailer.php" class="contact-form">
           <div class="row">
             <div class="col-form_label">
               <label for="full-name">
@@ -98,7 +98,7 @@
                 class="email-input"
                 type="email"
                 id="email"
-                name="senderEmail"
+                name="email"
                 placeholder="example@email.com"
               />
             </div>
