update myFlix page with new navbar!

--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,12 @@
       href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
-    <!-- <link
+    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
+    <link
       rel="stylesheet"
       type="text/css"
       href="dist/css/style.production.css"
-    /> -->
+    />
   </head>
 
   <body>
@@ -64,12 +64,14 @@
       </nav>
     </header>
 
-    <?=$thankYou ?>
-
     <section class="contact-me content">
       <div class="contact-container">
         <h1 class="main-title">Contact Me</h1>
-        <form method="post" action="emailer.php" class="contact-form">
+        <form
+          method="post"
+          action="mailto:contactcruebee@gmail.com"
+          class="contact-form"
+        >
           <div class="row">
             <div class="col-form_label">
               <label for="full-name">
