Update project pages to have navbar, footer styling (all pages), begin reworking About pg.

--- a/contact.html
+++ b/contact.html
@@ -175,8 +175,9 @@
         </div>
       </footer>
     </div>
+
     <div class="logo-container">
-      <img src="img/crue_logo.svg" alt="Crue Jameson" />
+      <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
     </div>
 
     <script src="src/js/tota11y.min.js"></script>
