--- a/about.html
+++ b/about.html
@@ -1772,9 +1772,9 @@
           </div>
         </footer>
       </div>
-      <div class="logo-container">
-        <img src="img/crue_logo.svg" alt="Crue Jameson" />
-      </div>
+    </div>
+    <div class="logo-container">
+      <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
     </div>
 
     <script src="src/js/tota11y.min.js"></script>
