--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
           </div>
         </footer>
       </div>
-      <div class="logo-container">
-        <img src="img/crue_logo.svg" alt="Crue Jameson" />
-      </div>
+    </div>
+
+    <div class="logo-container">
+      <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
     </div>
 
     <!-- <script src="src/js/tota11y.min.js"></script> -->
