rename project pages to match work page

--- a/cruebeeflix.html
+++ b/cruebeeflix.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>cruebeeflix | Cruebee</title>
+    <title>myFlix | Cruebee</title>
     <link
       rel="icon"
       type="image/png"
@@ -64,7 +64,7 @@
 
     <div class="project-content">
       <main class="project-container">
-        <h1>cruebeeflix</h1>
+        <h1>myFlix</h1>
         <p>
           <a
             href="https://cruebeeflix.herokuapp.com/client"
