--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
         <h1 class="main-title">Contact Me</h1>
         <form
           method="post"
-          action="mailto:contactcruebee@gmail.com"
+          action="MAILTO:contactcruebee@gmail.com"
           class="contact-form"
         >
           <div class="row">
