--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,11 @@
       href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap"
       rel="stylesheet"
     />
+    <!-- Load Icon library for hamburger menu icon for small screens -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
     <link
       rel="stylesheet"
@@ -29,49 +34,26 @@
 
   <body>
     <header>
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="topnav">
-          <li role="presentation">
-            <img src="img/crue_logo_small.svg" alt="Crue Jameson" />
-          </li>
-          <li role="presentation" class="right">
-            <a href="index.html" role="menuitem" target="_self">
-              Home
-            </a>
-            <!-- This is BEM naming convention. (Block Element Modifier). -->
-          </li>
-          <li role="presentation">
-            <a href="about.html" role="menuitem" target="_self">
-              About Crue
-            </a>
-          </li>
-          <li role="presentation">
-            <a href="work.html" role="menuitem" target="_self">
-              Crue's Projects
-            </a>
-          </li>
-          <li role="presentation">
-            <a
-              href="contact.html"
-              role="menuitem"
-              target="_self"
-              class="active"
-            >
-              Contact Crue
-            </a>
-          </li>
-        </ul>
-      </nav>
+      <div id="navbar" data-toggle="collapse">
+        <nav class="top-nav" id="my-topnav">
+          <a href="index.html" role="menuitem" target="_self">Home</a>
+          <a href="about.html" role="menuitem" target="_self">About Crue</a>
+          <a href="work.html" role="menuitem" target="_self" class="active"
+            >Crue's Projects</a
+          >
+          <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
+          <!-- link with class="icon" used to open/close navbar on small screens -->
+        </nav>
+      </div>
     </header>
 
     <section class="contact-me content">
       <div class="contact-container">
         <h1 class="main-title">Contact Me</h1>
-        <form
-          method="post"
-          action="MAILTO:contactcruebee@gmail.com"
-          class="contact-form"
-        >
+        <form method="post" action="contact.php" class="contact-form">
           <div class="row">
             <div class="col-form_label">
               <label for="full-name">
@@ -84,7 +66,7 @@
                 type="text"
                 id="name"
                 name="name"
-                placeholder="(First Name) (Last Name)"
+                placeholder="Full name"
               />
             </div>
           </div>
@@ -101,7 +83,23 @@
                 type="email"
                 id="email"
                 name="email"
-                placeholder="example@email.com"
+                placeholder="Your e-mail"
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-form_label">
+              <label for="subject"
+                ><span class="required-field">*</span>Subject
+              </label>
+            </div>
+            <div class="col-form_input">
+              <input
+                required
+                type="text"
+                id="subject"
+                name="subject"
+                placeholder="Subject"
               />
             </div>
           </div>
@@ -123,7 +121,7 @@
           </div>
           <div class="row">
             <div class="submit-container">
-              <input type="submit" name="submit" value="Submit" />
+              <button type="submit" name="submit">Submit</button>
               <br />
               <span style="font-size: 18px;" class="required-field"
                 >* Indicates a required field.</span
@@ -180,6 +178,8 @@
       <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
     </div>
 
+    <script src="src/js/navhide.js"></script>
+    <script src="src/js/burgermenu.js"></script>
     <script src="src/js/tota11y.min.js"></script>
   </body>
 </html>
