update active navbar buttons

--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
+    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
 
-    <link
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       href="dist/css/style.production.css"
-    />
+    /> -->
   </head>
 
   <body>
     <header>
       <div id="navbar" data-toggle="collapse">
         <nav class="top-nav" id="my-topnav">
-          <a href="index.html" role="menuitem" target="_self">Home</a>
+          <a href="index.html" role="menuitem" target="_self" class="active"
+            >Home
+          </a>
           <a href="about.html" role="menuitem" target="_self">About Crue</a>
-          <a href="work.html" role="menuitem" target="_self" class="active"
-            >Crue's Projects</a
-          >
+          <a href="work.html" role="menuitem" target="_self">Crue's Projects</a>
           <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
