--- a/meetemup.html
+++ b/meetemup.html
@@ -40,10 +40,11 @@
         <nav class="top-nav" id="my-topnav">
           <a href="index.html" role="menuitem" target="_self">Home</a>
           <a href="about.html" role="menuitem" target="_self">About Crue</a>
-          <a href="work.html" role="menuitem" target="_self" class="active"
-            >Crue's Projects</a
-          >
+          <a href="work.html" role="menuitem" target="_self">Crue's Projects</a>
           <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
+          <a href="work.html" role="menuitem" target="_self" class="active"
+            >Back to Projects
+          </a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
