--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
       <div id="navbar" data-toggle="collapse">
         <nav class="top-nav" id="my-topnav">
           <a href="index.html" role="menuitem" target="_self">Home</a>
-          <a href="about.html" role="menuitem" target="_self">About Crue</a>
-          <a href="work.html" role="menuitem" target="_self" class="active"
-            >Crue's Projects</a
-          >
+          <a href="about.html" role="menuitem" target="_self" class="active"
+            >About Crue
+          </a>
+          <a href="work.html" role="menuitem" target="_self">Crue's Projects</a>
           <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
