--- a/work.html
+++ b/work.html
@@ -40,8 +40,8 @@
           <a href="index.html" role="menuitem" target="_self">Home</a>
           <a href="about.html" role="menuitem" target="_self">About Crue</a>
           <a href="work.html" role="menuitem" target="_self" class="active"
-            >Crue's Projects</a
-          >
+            >Crue's Projects
+          </a>
           <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
