--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, height=device-height, initial-scale=1"
+    />
     <title>Crue Jameson - Portfolio</title>
     <!-- Is the following code the most effective way to add in a favicon downloaded from the internet? -->
     <link
@@ -26,13 +29,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
 
-    <!-- <link
+    <link
       rel="stylesheet"
       type="text/css"
       href="dist/css/style.production.css"
-    /> -->
+    />
   </head>
 
   <body>
@@ -67,12 +70,13 @@
           alt="A picture of the developer, Eric Gerlach"
         />
 
-        <h1>Hello there! My name is <span class="crue-span">Crue</span>.</h1>
-        <p>
-          I am a new <span>web</span> designer and developer from Colorado. I'm
-          thrilled you've decided to look over my portfolio, and I would like to
-          thank you for taking the time to browse my site. Enjoy and happy
-          browsing!
+        <h1 class="profile-hello">
+          Welcome! My name is <span class="crue-span">Crue</span> Jameson.
+        </h1>
+        <p class="profile-text">
+          I am a new web designer and developer from Colorado. I'm thrilled
+          you've decided to look over my portfolio, and I would like to thank
+          you for taking the time to browse my site. Enjoy and happy browsing!
         </p>
         <a
           href="https://github.com/Cruebee?tab=repositories"
@@ -82,27 +86,30 @@
         >
       </div>
     </div>
+    <div class="index-spacer__bottom"></div>
 
-    <div class="foot-wrap">
-      <footer class="page-footer">
-        <p>Find Me On</p>
-        <div class="social-media">
-          <a href="https://github.com/Cruebee" target="_blank"
-            ><img src="img/github_icon.svg" alt="Github"
-          /></a>
-          <a href="https://twitter.com/cruebee" target="_blank"
-            ><img src="img/twitter_icon.svg" alt="Twitter"
-          /></a>
-          <a
-            href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/"
-            target="_blank"
-            ><img src="img/linkedin_icon.svg" alt="LinkedIn"
-          /></a>
-          <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
-            ><img src="img/instagram_icon.svg" alt="Instagram"
-          /></a>
-        </div>
-      </footer>
+    <div class="index-foot__wrap">
+      <div class="foot-wrap">
+        <footer class="page-footer">
+          <p>Find Me On</p>
+          <div class="social-media">
+            <a href="https://github.com/Cruebee" target="_blank"
+              ><img src="img/github_icon.svg" alt="Github"
+            /></a>
+            <a href="https://twitter.com/cruebee" target="_blank"
+              ><img src="img/twitter_icon.svg" alt="Twitter"
+            /></a>
+            <a
+              href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/"
+              target="_blank"
+              ><img src="img/linkedin_icon.svg" alt="LinkedIn"
+            /></a>
+            <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
+              ><img src="img/instagram_icon.svg" alt="Instagram"
+            /></a>
+          </div>
+        </footer>
+      </div>
     </div>
 
     <div class="logo-container">
