--- a/work.html
+++ b/work.html
@@ -25,12 +25,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
-    <!-- <link
+    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
+    <link
       rel="stylesheet"
       type="text/css"
       href="dist/css/style.production.css"
-    /> -->
+    />
   </head>
 
   <body>
@@ -57,50 +57,65 @@
         <div class="grid">
           <div class="grid__item">
             <h2>myFlix</h2>
-            <p>
+            <p class="proj-desc">
               I designed and created both the frontend and backend for a movie
               lover's app. Here users can create profiles, view a list of movies
               with details about the movies, their directors, and genres and
               more!
             </p>
-            <a class="button" href="cruebeeflix.html">Mmmmovies!</a>
+            <a class="button projects" href="cruebeeflix.html">Mmmmovies!</a>
           </div>
           <div class="grid__item">
             <h2>Quiztron</h2>
-            <p>
-              I created a quiz app to test out some of the features that Angular
-              has to offer. Here users can select from a few short quizzes and
-              view the results of the quiz.
+            <p class="proj-desc">
+              Quiztron was developed to test out some of the features that
+              Angular has to offer. This project introduced new technologies and
+              methods. Here users can select from a few short quizzes and view
+              the results of their quizzes.
             </p>
-            <a class="button" href="quiztron.html">Take a quizzy!</a>
+            <a class="button projects" href="quiztron.html">Take a quizzy!</a>
           </div>
           <div class="grid__item">
             <h2>Memberberry</h2>
-            <p>A simple To-Do app to help you member!</p>
-            <a class="button" href="memberberry.html">You member right?</a>
-          </div>
-          <div class="grid__item">
-            <h2>meetemup</h2>
-            <p>Check out the meetemup app.</p>
-            <a href="meetemup.html" class="button">meetemup app</a>
-          </div>
-          <div class="grid__item">
-            <h2>HTML</h2>
-            <p>Here is some of my favorite HTML work!</p>
-            <a
-              class="button"
-              href="https://github.com/Cruebee/jQuery-poke-tracker/blob/master/index.html"
-              >My HTML Projects</a
+            <p class="proj-desc">
+              A simple To-Do app to help you member! I developed this
+              application with Vue.js, and experimented a little with Vue
+              Material design to style the application. This project helped to
+              solidify the understanding of documentation.
+            </p>
+            <a class="button projects" href="memberberry.html"
+              >You member right?</a
             >
           </div>
           <div class="grid__item">
-            <h2>Travel Board</h2>
-            <p>
-              My partner and I love to travel! I wanted us to be able to track
-              and share all of the things that we do while we are on vacation,
-              so we can help our friends achieve their dream vacation goals!
+            <h2>meetemup</h2>
+            <p class="proj-desc">
+              Check out the meetemup app! This app interacts with the meetup
+              API. Here users can login with OAUTH, and browse a list of events
+              in their area, they can also search different locations for
+              events.
             </p>
-            <a class="button" href="#">Project on the way!</a>
+            <a href="meetemup.html" class="button projects">Meetemup app</a>
+          </div>
+          <div class="grid__item">
+            <h2>Pokedex</h2>
+            <p class="pokedex-desc">
+              This application is all about HTML5, CSS, jQuery, and JavaScript.
+              The styling for this app was created with the help Bootstrap, and
+              interacts with the Pokemon API. This project took a deep dive into
+              advanced JavaScript methods.
+            </p>
+            <a href="poke-tracker.html" class="button projects">Pokedex</a>
+          </div>
+          <div class="grid__item">
+            <h2>ChatterBox</h2>
+            <p class="proj-desc">
+              ChatterBox is a React Native project exploring the process of
+              creating and implementing code for both iPhone, and Android users
+              at the same time! This advanced application proved to be both
+              difficult and highly rewarding.
+            </p>
+            <a class="button projects" href="#">Project on the way!</a>
           </div>
         </div>
       </section>
